--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,5 @@
-name: Laravel
+
+name: Deploy to GCP (Laravel)
 
 on:
   push:
@@ -7,29 +8,35 @@ on:
     branches: [ main ]
 
 jobs:
-  laravel-tests:
-
+  deploy:
+    name: Setup GCloud Account
     runs-on: ubuntu-latest
-
+    #enviroment: gcp-prod
+    env:
+      IMAGE_NAME: gcr.io/${{secrets.GCP_PROJECT_ID}}/site/latest
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v2
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      #Git Checkout
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      #Login to GCP
+      - uses: google-github-actions/setup-gcloud@v0.2.0
+        with:
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+      # gcloud configure docker
+      - name: Configure Docker
+        run: gcloud auth configure-docker --quiet
+
+      #build image
+      - name: Build Docker Image
+        run: docker build -t $IMAGE_NAME .
+
+      # push image to registry
+      - name: Push Docker Image
+        run: docker push $IMAGE_NAME
+
+      # deploy image
+      - name: Deploy Docker Image
+        run: gcloud run deploy site --image  gcr.io/arched-sunbeam-302621/site/latest --region us-central1 --memory 128MI --min-instances 1 --max-instances 2 --platform managed --port 80 --allow-unauthenticated
